syntax = "proto3";

package astria.sequencer.v1alpha1;

import "astria/sequencer/v1alpha1/block.proto";

message GetSequencerBlockRequest {
  // The height of the block to retrieve.
  int64 height = 1;
}

message GetFilteredSequencerBlockRequest {
  // The height of the block to retrieve.
  int64 height = 1;
  // The 32 bytes identifying a rollup. Usually the sha256 hash of a plain rollup name.
  bytes rollup_id = 2;
}

service SequencerService {
  // Given a block height, returns the sequencer block at that height.
  rpc GetSequencerBlock(GetSequencerBlockRequest) returns (SequencerBlock);
  // Given a block height and rollup id, returns a SequencerBlock which is filtered to contain
  // only the transactions that are relevant to the given rollup. 
  rpc GetFilteredSequencerBlock(GetFilteredSequencerBlockRequest) returns (SequencerBlock);
}
